<resources>
    <string name="app_name">Behind the Tables</string>
    <string name="title_activity_random_table">RandomTableActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="sample_description">
        "These are tables for adding quick flavor and encounters to a forested region."
        "You can use these to generate a single forest location for an encounter or to set up a map of a forest region."</string>
    <string name="action_settings">Settings</string>
    <string name="dice_entry_string">%1$d.</string>
    <string name="dice_entry_from_to_string">%1$d-%2$d.</string>
    <string name="reroll_single_table_btn">Reroll this table</string>
    <string name="action_collapse_all">Collapse all</string>
    <string name="action_expand_all">Expand all</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_reset_table">Reset</string>
    <string name="action_open_on_reddit">Open in reddit</string>
    <string name="error_unknown"><![CDATA[<Error: Unknown>]]></string>
    <string name="info_index_indicator">#%1$d</string>
    <string name="action_toggle_fav">Toggle favourite</string>
    <string name="action_search">Search</string>
    <string name="action_search_detail">Search table</string>
    <string name="action_fav">Add to favorites</string>
    <string name="action_unfav">Remove from favorites</string>
    <string name="search_query_support_fav_tag">favorites</string>
    <string name="action_fav_detail">Do you want to add \'%1$s\' to your favorites?</string>
    <string name="action_unfav_detail">Do you want to remove \'%1$s\' from your favorites?</string>
    <string name="info_added_to_favs">\'%1$s\' added to favorites.</string>
    <string name="info_removed_from_favs">\'%1$s\' removed from favorites.</string>
    <string name="action_clear_favs">Clear favorites</string>
    <string name="action_clear_favs_detail">Do you want to unfavorite all tables?\n\nCurrently favored: %1$d table(s)!</string>
    <string name="action_select_category_instruction">Select a category</string>
    <string name="category_all">All categories</string>
    <string name="category_favs">Favorites only</string>
    <string name="action_again">Try again</string>
    <string name="action_random_table">I\'m feeling lucky</string>
    <string name="action_discover_external">Custom tables</string>
    <string name="action_discover_external_dialog">Import tables now</string>
    <string name="action_more_info">More info</string>
    <string name="info_discover_external_files_dialog">You can add your own table files in any subfolder in this directory:\n\n%1$s\n\nYour tables must be in the JSON file format.\nTo view and download examples tap on \'more info\'.\n\nTo optimize load times, tables <b>are not imported automatically</b>. You must tell the app to do so with the button below.</string>
    <string name="action_discover_external_progressdialog">Preparing tables. Please wait.</string>
    <string name="unit_b" translatable="false">B</string>
    <string name="unit_kb" translatable="false">kB</string>
    <string name="unit_mb" translatable="false">MB</string>
    <string name="unit_gb" translatable="false">GB</string>
    <string name="unit_tb" translatable="false">TB</string>
    <string name="info_imports_failed_title">Import failed!</string>
    <string name="info_imports_failed_text">Failed to import %1$s file(s) out of %2$s found file(s) (%3$s failure)!\nThe other files were imported without problems.\n\nList of files causing trouble:\n%4$s</string>
    <string name="info_imports_nothing_found">No custom files to import found on in the external storage of this device.</string>
    <string name="info_imports_everything_ok">Added / Updated %1$d external table(s).</string>
    <string name="table_file_ioexception">Table file %1$s could not be read.</string>
    <string name="action_externa_file_info">File info</string>
    <string name="action_externa_file_info_detail">%1$s\n\nFile size: %2$s\nLast edited: %3$s</string>
    <string name="action_share_external_file">Export file</string>
    <string name="action_share_external_file_content">Share file content</string>
    <string name="error_no_mimetype_for_json">Your android does not (yet) know how to properly handle JSON files. This might result in unexpected behaviour.</string>
    <string name="action_share">Share</string>
    <string name="action_share_tables_with">Share table results via:</string>
    <string name="error_nothing_rolled">No table has been rolled yet.</string>
    <string name="error_no_table_intent_extra">Error: Table to load unknown.</string>
    <string name="error_table_not_found">Error: Could not find specified table.</string>
    <string name="error_internal_json_exception">Error: Heavy internal error. Could not read internal table data.</string>
    <string name="info_keywords">Keywords: %1$s</string>
    <string name="info_related">Related: </string>
    <string name="info_use_with">Use with: </string>
    <string name="pref_category_general">General</string>
    <string name="prefs_reset_database_title">Reset all Tables</string>
    <string name="prefs_reset_database_summary">Resets all tables to their defaults and removes custom tables.</string>
    <string name="prefs_reset_db_success">Table reset successful</string>
    <string name="pref_credits">Credits</string>
    <string name="prefs_credits_timber" translatable="false"><i>Timber</i> by Jake Wharton</string>
    <string name="prefs_credits_debug_db" translatable="false"><i>Android</i> Debug Database by Amit Shekhar</string>
    <string name="share_via">Share via</string>
    <string name="pref_header_general">General</string>
    <string name="prefs_credits_nilsfo">NilsFo</string>
    <string name="pref_developers">Developers</string>
    <string name="prefs_credits_pherbers">pherbers</string>
    <string name="prefs_credits_btt">/r/BehindTheTables</string>
    <string name="prefs_credits_animators"><i>RecyclerView Animators</i> by Wasabeef</string>
    <string name="prefs_credits_github">Visit us on GitHub</string>
</resources>