<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="prefs_credits_github"
        android:summary="https://github.com/pherbers/BehindTheTablesApp"
        android:title="@string/prefs_credits_github"/>

    <PreferenceCategory
        android:key="pref_cat_developers"
        android:title="@string/pref_developers">

        <Preference
            android:key="prefs_credits_nilsfo"
            android:summary="https://github.com/NilsFo"
            android:title="@string/prefs_credits_nilsfo"/>

        <Preference
            android:key="prefs_credits_pherbers"
            android:summary="https://github.com/pherbers"
            android:title="@string/prefs_credits_pherbers"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_cat_credits"
        android:title="@string/pref_credits">
        <Preference
            android:key="prefs_credits_btt"
            android:summary="https://reddit.com/r/behindthetables"
            android:title="@string/prefs_credits_btt"/>

        <Preference
            android:key="prefs_credits_animators"
            android:summary="https://github.com/wasabeef/recyclerview-animators"
            android:title="@string/prefs_credits_animators"/>

        <Preference
            android:key="prefs_credits_timber"
            android:summary="https://github.com/JakeWharton/timber"
            android:title="@string/prefs_credits_timber"/>

        <Preference
            android:key="prefs_credits_debug_db"
            android:summary="https://github.com/amitshekhariitbhu/Android-Debug-Database"
            android:title="@string/prefs_credits_debug_db"/>
    </PreferenceCategory>
</PreferenceScreen>