<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_clar_favs"
        android:title="@string/action_clear_favs"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_category_select_search"
        android:icon="@drawable/ic_search_white_48dp"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_discover_external"
        android:title="@string/action_discover_external"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_category_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>