<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search_white_48dp"
        android:title="@string/action_search"
        app:showAsAction="ifRoom|collapseActionView"
        />

    <item
        android:id="@+id/action_debug_reset_db"
        android:title="Debug: Reset DB"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_clar_favs"
        android:title="@string/action_clear_favs"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
