<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_table_select_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@drawable/baseline_search_24_white"
        android:iconifiedByDefault="true"
        android:title="@string/action_search"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_add_new_table"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/action_add_new_table"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_random_table"
        android:title="@string/action_random_table"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_table_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
